Separate README for the new project and for the starter project itself.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "g-1-a/new",
+    "name": "g-1-a/starter",
     "description": "Template project for PHP libraries.",
     "license": "MIT",
     "authors": [
